Продолжаю писать тесты для transaction-service
