# modules/transaction-service/src/main/java/com/advanced/transactionservice/repository/PaymentRequestRepository.java
@@ -3,7 +3,9 @@ package com.advanced.transactionservice.repository;
 import com.advanced.transactionservice.model.PaymentRequest;
 import org.springframework.data.jpa.repository.JpaRepository;
 
+import java.util.Optional;
 import java.util.UUID;
 
 public interface PaymentRequestRepository extends JpaRepository<PaymentRequest, UUID> {
+    Optional<PaymentRequest> findByTransactionUid(UUID transactionUid);
 }
